[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Title_Scene.gd" type="Script" id=1]
[ext_resource path="res://font/FreeSans.tres" type="DynamicFont" id=2]
[ext_resource path="res://font/FreeSans_big.tres" type="DynamicFont" id=3]
[ext_resource path="res://font/FreeSans_small.tres" type="DynamicFont" id=4]

[sub_resource type="Theme" id=1]


[node name="Title_Scene" type="Control" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin" ]

[node name="BG" type="Panel" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1293.0
margin_top = -770.0
margin_right = 1294.0
margin_bottom = 770.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="Panel" type="Panel" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -492.0
margin_top = -280.0
margin_right = 492.0
margin_bottom = 280.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="Start_easy" type="Button" parent="Panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 289.0
margin_top = 364.0
margin_right = 364.0
margin_bottom = 384.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Easy"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Start_medium" type="Button" parent="Panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 443.0
margin_top = 364.0
margin_right = 518.0
margin_bottom = 384.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Medium"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Start_hard" type="Button" parent="Panel" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 615.0
margin_top = 364.0
margin_right = 690.0
margin_bottom = 384.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Hard"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="About" type="Button" parent="Panel" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 787.0
margin_top = 504.0
margin_right = 862.0
margin_bottom = 524.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "About..."
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="Title" type="Label" parent="Panel" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 232.0
margin_top = 143.0
margin_right = 752.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Shit Country Sweeper"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="About_Panel" type="Panel" parent="." index="2"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -507.0
margin_top = -274.0
margin_right = 476.0
margin_bottom = 274.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = SubResource( 1 )
_sections_unfolded = [ "Margin", "Size Flags" ]

[node name="RichTextLabel" type="RichTextLabel" parent="About_Panel" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.5
margin_top = -161.0
margin_right = 214.5
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "SHIT COUNTRY SWEEPER

A game designed for Ludum Dare 41 by Damien Picard

Thanks to:
Cultural vector maps by Natural Earth. Free vector and raster map data @ naturalearthdata.com.

Map color by NASA’s Earth Observatory https://earthobservatory.nasa.gov/Features/BlueMarble/"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "SHIT COUNTRY SWEEPER

A game designed for Ludum Dare 41 by Damien Picard

Thanks to:
Cultural vector maps by Natural Earth. Free vector and raster map data @ naturalearthdata.com.

Map color by NASA’s Earth Observatory https://earthobservatory.nasa.gov/Features/BlueMarble/"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "BBCode", "Size Flags", "custom_fonts" ]

[connection signal="pressed" from="Panel/Start_easy" to="." method="_start_game" binds= [ "easy" ]]

[connection signal="pressed" from="Panel/Start_medium" to="." method="_start_game" binds= [ "medium" ]]

[connection signal="pressed" from="Panel/Start_hard" to="." method="_start_game" binds= [ "hard" ]]

[connection signal="pressed" from="Panel/About" to="." method="_show_about"]


